# inventoy-managment-cpp

./: .gitignore  CMakeLists.txt  Read.me  inventory.cpp  main.cpp
datas/: 2-seed-data.sql  DatabaseHandler.h  alldatas.db  create_tables.sql  databaseHandler.cpp  requests.txt
